--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 * {
     margin: 0;
-    padding: 30px;
+    padding: 0;
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
 }
@@ -11,8 +11,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    width: 100vw;
+    height: 80vh;
+    width: 80vw;
     overflow: hidden;
     background: #2c3e50; /* Background gelap */
 }
