--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 10vh;
+    margin-top: 10vh;
+    margin-bottom: 10vh;
     height: 100vh;
     width: 100vw;
     overflow: hidden;
